--- a/index.html
+++ b/index.html
@@ -1,15 +1,33 @@
 <html lang="en">
+
 <head>
      <meta charset="UTF-8">
      <meta http-equiv="X-UA-Compatible" content="IE=edge">
      <meta name="viewport" content="width=device-width, initial-scale=1.0">
      <title>To Do List - Online</title>
-     
+
      <link rel="stylesheet" href="style/style.css">
+
+     <link rel="preconnect" href="https://fonts.googleapis.com">
+     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+     <link href="https://fonts.googleapis.com/css2?family=Source+Sans+Pro:wght@200;300;400;600&display=swap"
+          rel="stylesheet">
 </head>
+
 <body>
      <header>
           <h1 class="titulo-principal">Things To Do</h1>
      </header>
+
+     <main>
+          <div class="contenedor">
+               <h3>Things To Do</h3>
+               <div class="elementos-para-hacer">
+                    
+               </div>
+               <button>Add Task</button>
+          </div>
+     </main>
+
 </body>
 </html>
