--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
           <div class="contenedor">
                <h3>Things To Do</h3>
                <div class="lista-tareas" id="elementos-para-hacer">
-                    
+
                </div>
                <button>Add Task</button>
           </div>
@@ -43,5 +43,7 @@
           </div>
      </main>
 
+
+     <script type="text/javascript" src="js/script.js"></script>
 </body>
 </html>
