Empezado apartado de estilo de listas

--- a/index.html
+++ b/index.html
@@ -23,21 +23,62 @@
           <div class="contenedor">
                <h3>Things To Do</h3>
                <div class="lista-tareas" id="elementos-para-hacer">
-
+                    <div class="tarea">
+                         <p class="nombre-tarea">Hacer un PowerPoint</p>
+                         <svg xmlns="http://www.w3.org/2000/svg" class="icon icon-tabler icon-tabler-alarm" width="24"
+                              height="24" viewBox="0 0 24 24" stroke-width="1.5" stroke="#141414" fill="none"
+                              stroke-linecap="round" stroke-linejoin="round">
+                              <path stroke="none" d="M0 0h24v24H0z" fill="none" />
+                              <circle cx="12" cy="13" r="7" />
+                              <polyline points="12 10 12 13 14 13" />
+                              <line x1="7" y1="4" x2="4.25" y2="6" />
+                              <line x1="17" y1="4" x2="19.75" y2="6" />
+                         </svg>
+                         <p>: 20 min</p>
+                         <button class="button-red button-small">Remove Task</button>
+                    </div>
+                    <div class="tarea">
+                         <p class="nombre-tarea">Hacer un PowerPoint</p>
+                         <svg xmlns="http://www.w3.org/2000/svg" class="icon icon-tabler icon-tabler-alarm" width="24"
+                              height="24" viewBox="0 0 24 24" stroke-width="1.5" stroke="#141414" fill="none"
+                              stroke-linecap="round" stroke-linejoin="round">
+                              <path stroke="none" d="M0 0h24v24H0z" fill="none" />
+                              <circle cx="12" cy="13" r="7" />
+                              <polyline points="12 10 12 13 14 13" />
+                              <line x1="7" y1="4" x2="4.25" y2="6" />
+                              <line x1="17" y1="4" x2="19.75" y2="6" />
+                         </svg>
+                         <p>: 20 min</p>
+                         <button class="button-red button-small">Remove Task</button>
+                    </div>
+                    <div class="tarea">
+                         <p class="nombre-tarea">Hacer un PowerPoint</p>
+                         <svg xmlns="http://www.w3.org/2000/svg" class="icon icon-tabler icon-tabler-alarm" width="24"
+                              height="24" viewBox="0 0 24 24" stroke-width="1.5" stroke="#141414" fill="none"
+                              stroke-linecap="round" stroke-linejoin="round">
+                              <path stroke="none" d="M0 0h24v24H0z" fill="none" />
+                              <circle cx="12" cy="13" r="7" />
+                              <polyline points="12 10 12 13 14 13" />
+                              <line x1="7" y1="4" x2="4.25" y2="6" />
+                              <line x1="17" y1="4" x2="19.75" y2="6" />
+                         </svg>
+                         <p>: 20 min</p>
+                         <button class="button-red button-small">Remove Task</button>
+                    </div>
                </div>
                <button>Add Task</button>
           </div>
           <div class="contenedor">
                <h3>WIP</h3>
                <div class="lista-tareas" id="elementos-haciendo">
-                    
+
                </div>
                <button>Complete Tasks</button>
           </div>
           <div class="contenedor">
                <h3>Done Things!</h3>
                <div class="lista-tareas" id="elementos-hechos">
-                    
+
                </div>
                <button>Clear Tasks</button>
           </div>
@@ -46,4 +87,5 @@
 
      <script type="text/javascript" src="js/script.js"></script>
 </body>
+
 </html>
