Clase Tarea hecha y cambios varios

--- a/index.html
+++ b/index.html
@@ -10,8 +10,7 @@
 
      <link rel="preconnect" href="https://fonts.googleapis.com">
      <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-     <link href="https://fonts.googleapis.com/css2?family=Source+Sans+Pro:wght@200;300;400;600&display=swap"
-          rel="stylesheet">
+     <link href="https://fonts.googleapis.com/css2?family=Source+Sans+Pro:wght@200;300;400;600&display=swap" rel="stylesheet">
 </head>
 
 <body>
@@ -23,48 +22,17 @@
           <div class="contenedor">
                <h3>Things To Do</h3>
                <div class="lista-tareas" id="elementos-para-hacer">
+               <!-- 
                     <div class="tarea">
                          <p class="nombre-tarea">Hacer un PowerPoint</p>
-                         <svg xmlns="http://www.w3.org/2000/svg" class="icon icon-tabler icon-tabler-alarm" width="24"
-                              height="24" viewBox="0 0 24 24" stroke-width="1.5" stroke="#141414" fill="none"
-                              stroke-linecap="round" stroke-linejoin="round">
-                              <path stroke="none" d="M0 0h24v24H0z" fill="none" />
-                              <circle cx="12" cy="13" r="7" />
-                              <polyline points="12 10 12 13 14 13" />
-                              <line x1="7" y1="4" x2="4.25" y2="6" />
-                              <line x1="17" y1="4" x2="19.75" y2="6" />
-                         </svg>
+                         <img src="media/svg/time.svg" alt="">
                          <p>: 20 min</p>
-                         <button class="button-red button-small">Remove Task</button>
-                    </div>
-                    <div class="tarea">
-                         <p class="nombre-tarea">Hacer un PowerPoint</p>
-                         <svg xmlns="http://www.w3.org/2000/svg" class="icon icon-tabler icon-tabler-alarm" width="24"
-                              height="24" viewBox="0 0 24 24" stroke-width="1.5" stroke="#141414" fill="none"
-                              stroke-linecap="round" stroke-linejoin="round">
-                              <path stroke="none" d="M0 0h24v24H0z" fill="none" />
-                              <circle cx="12" cy="13" r="7" />
-                              <polyline points="12 10 12 13 14 13" />
-                              <line x1="7" y1="4" x2="4.25" y2="6" />
-                              <line x1="17" y1="4" x2="19.75" y2="6" />
-                         </svg>
-                         <p>: 20 min</p>
-                         <button class="button-red button-small">Remove Task</button>
-                    </div>
-                    <div class="tarea">
-                         <p class="nombre-tarea">Hacer un PowerPoint</p>
-                         <svg xmlns="http://www.w3.org/2000/svg" class="icon icon-tabler icon-tabler-alarm" width="24"
-                              height="24" viewBox="0 0 24 24" stroke-width="1.5" stroke="#141414" fill="none"
-                              stroke-linecap="round" stroke-linejoin="round">
-                              <path stroke="none" d="M0 0h24v24H0z" fill="none" />
-                              <circle cx="12" cy="13" r="7" />
-                              <polyline points="12 10 12 13 14 13" />
-                              <line x1="7" y1="4" x2="4.25" y2="6" />
-                              <line x1="17" y1="4" x2="19.75" y2="6" />
-                         </svg>
-                         <p>: 20 min</p>
-                         <button class="button-red button-small">Remove Task</button>
-                    </div>
+                         <button class="button-small">Begin Task</button>
+                         <button class="button-red button-small">
+                              <img src="media/svg/trash.svg" alt="">
+                         </button>
+                    </div> 
+               -->
                </div>
                <button>Add Task</button>
           </div>
