Seecion inputs hecha

--- a/index.html
+++ b/index.html
@@ -18,6 +18,12 @@
           <h1 class="titulo-principal">Things To Do</h1>
      </header>
 
+     <section>
+          <input placeholder="Type the task name here" type="text" name="nombre-tarea" id="input--nombre-tarea">
+          <input placeholder="Type the time you expect the task to last here..." type="text" name="tiempo-tarea" id="input--tiempo-tarea">    
+          <button>Create Task</button>      
+     </section>
+
      <main>
           <div class="contenedor">
                <h3>Things To Do</h3>
@@ -34,7 +40,6 @@
                     </div> 
                -->
                </div>
-               <button>Add Task</button>
           </div>
           <div class="contenedor">
                <h3>WIP</h3>
