Funcionalidades eliminar tarea, texto contenedor vacio y arreglos varios

--- a/index.html
+++ b/index.html
@@ -28,17 +28,20 @@
           <div class="contenedor">
                <h3>Things To Do</h3>
                <div class="lista-tareas" id="elementos-para-hacer">
+                    <p id="texto--tareas-vacias" class="texto-secundario">There are currently no tasks</p>
                </div>
           </div>
           <div class="contenedor">
                <h3>WIP</h3>
                <div class="lista-tareas" id="elementos-haciendo">
+                    <p id="texto--tareas-vacias" class="texto-secundario">There are currently no tasks</p>
                </div>
                <button>Complete Tasks</button>
           </div>
           <div class="contenedor">
                <h3>Done Things!</h3>
                <div class="lista-tareas" id="elementos-hechos">
+                    <p id="texto--tareas-vacias" class="texto-secundario">There are currently no tasks</p>
                </div>
                <button>Clear Tasks</button>
           </div>
