--- a/index.html
+++ b/index.html
@@ -36,14 +36,14 @@
                <div class="lista-tareas" id="elementos-haciendo">
                     <p id="texto--tareas-vacias" class="texto-secundario">There are currently no tasks</p>
                </div>
-               <button>Complete Tasks</button>
+               <button onclick="completarTareasHaciendo()">Complete Tasks</button>
           </div>
           <div class="contenedor">
                <h3>Done Things!</h3>
                <div class="lista-tareas" id="elementos-hechos">
                     <p id="texto--tareas-vacias" class="texto-secundario">There are currently no tasks</p>
                </div>
-               <button>Clear Tasks</button>
+               <button onclick="eliminarTareasHechas()">Clear Tasks</button>
           </div>
      </main>
 
