Pagina hecha responsive y cambios varios

--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
                <button onclick="completarTareasHaciendo()">Complete Tasks</button>
           </div>
           <div class="contenedor">
-               <h3>Done Things!</h3>
+               <h3>Done Things! 👍🏼</h3>
                <div class="lista-tareas" id="elementos-hechos">
                     <p id="texto--tareas-vacias" class="texto-secundario">There are currently no tasks</p>
                </div>
