Ampliacion de menu de navegacion comenzada

--- a/index.html
+++ b/index.html
@@ -15,7 +15,17 @@
 
 <body>
      <header>
+          <a class="mi-github" href="https://github.com/">My Github!</a>
           <h1 class="titulo-principal">Things To Do</h1>
+          <div class="temas-colores">
+               <div id="rojo"></div>
+               <div id="azul"></div>
+               <div id="verde"></div>
+               <div id="amarillo"></div>
+               <div id="morado"></div>
+               <div id="oscuro"></div>
+               <div id="default"></div>
+          </div>
      </header>
 
      <section>
