Temas de colores acabado

--- a/index.html
+++ b/index.html
@@ -18,13 +18,10 @@
           <a class="mi-github" href="https://github.com/">My Github!</a>
           <h1 class="titulo-principal">Things To Do</h1>
           <div class="temas-colores">
-               <div id="rojo"></div>
-               <div id="azul"></div>
-               <div id="verde"></div>
-               <div id="amarillo"></div>
-               <div id="morado"></div>
-               <div id="oscuro"></div>
-               <div id="default"></div>
+               <div id="amarillo" onclick="cambiarTema(this)"></div>
+               <div id="oscuro" onclick="cambiarTema(this)"></div>
+               <div id="morado" onclick="cambiarTema(this)"></div>
+               <div id="default" onclick="cambiarTema(this)"></div>
           </div>
      </header>
 
