--- a/index.html
+++ b/index.html
@@ -18,10 +18,10 @@
           <a class="mi-github" href="https://github.com/">My Github!</a>
           <h1 class="titulo-principal">Things To Do</h1>
           <div class="temas-colores">
-               <div class="boton-tema" id="amarillo""></div>
-               <div class="boton-tema" id="oscuro""></div>
-               <div class="boton-tema" id="morado""></div>
-               <div class="boton-tema" id="default""></div>
+               <div class="boton-tema" id="amarillo"></div>
+               <div class="boton-tema" id="oscuro"></div>
+               <div class="boton-tema" id="morado"></div>
+               <div class="boton-tema" id="default"></div>
           </div>
      </header>
 
